social menu placeholder change

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div>
                 <nav>
                     <ul>
-                        <li><a href="#" class="social-icon" id="twitter"><span>rssrss</span></a></li>
-                        <li><a href="#" class="social-icon" id="facebook"><span>rssrss</span></a></li>
-                        <li><a href="#" class="social-icon" id="rss"><span>rssrss</span></a></li>
-                        <li><a href="#" class="social-icon" id="pinterest"><span>rssrss</span></a></li>
-                        <li><a href="#" class="social-icon" id="google"><span>rssrss</span></a></li>
-                        <li><a href="#" class="social-icon" id="dribbble"><span>rssrss</span></a></li>
+                        <li><a href="#" class="social-icon" id="twitter"><span>span</span></a></li>
+                        <li><a href="#" class="social-icon" id="facebook"><span>span</span></a></li>
+                        <li><a href="#" class="social-icon" id="rss"><span>span</span></a></li>
+                        <li><a href="#" class="social-icon" id="pinterest"><span>span</span></a></li>
+                        <li><a href="#" class="social-icon" id="google"><span>span</span></a></li>
+                        <li><a href="#" class="social-icon" id="dribbble"><span>span</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -92,7 +92,7 @@
             </div>
             <div>
                 <a href="">
-                    <img src="./imagens/news_05.png" alt="jesusTxt">
+                    <img src="./imagens/news_02.png" alt="buttons">
                     <h2>NEWS 05</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae corporis eum ex.</p>
                 </a>
